--- a/data/investor.yml
+++ b/data/investor.yml
@@ -10,6 +10,9 @@ category:
       - name: "Banque Raiffeisen Martigny et Région"
         link: "https://www.raiffeisen.ch/martigny-et-region/fr.html"
         image: "images/team/raiffeisen-1200x1200.png"
+      - name: "Elcotherm"
+        link: "https://elco.net"
+        image: "images/team/elcotherm-1200x1200.png"
   - name: "Ondes d'or"
     logo: "images/team/ondes-or-1200x1200.png"
     size: 3
@@ -17,6 +20,12 @@ category:
       - name: "SOLTOP Energie AG"
         link: "https://www.soltop-energie.ch"
         image: "images/team/soltop-1200x1200.png"
+      - name: "Coutaz SA"
+        link: "https://www.coutaz.ch"
+        image: "images/team/coutaz-1200x1200.png"
+      - name: "Projet Hidalgo"
+        link: "http://projethidalgo.com"
+        image: "images/team/hidalgo-1200x1200.png"
   - name: "Ondes d'argent"
     logo: "images/team/ondes-argent-1200x1200.png"
     size: 2
@@ -33,6 +42,12 @@ category:
       - name: "Meier Tobler SA"
         link: "https://www.meiertobler.ch"
         image: "images/team/meier-tobler-sa-1200x1200.png"
+      - name: "Cave l'Alchémille"
+        link: "https://albertluisier.ch"
+        image: "images/team/alchemille-1200x1200.png"
+      - name: "Hoval"
+        link: "https://www.hoval.com"
+        image: "images/team/hoval-1200x1200.png"
   - name: "Ondes de bronze"
     logo: "images/team/ondes-bronze-1200x1200.png"
     size: 2
@@ -40,7 +55,10 @@ category:
       - name: "EvoSun Sàrl"
         link: "https://evosun.ch"
         image: "images/team/evosun-1200x1200.png"
-      #- name: "BRUGG AG"
-      #  link: "https://brugg.com"
-      #  image: "images/team/tbd.jpg"
+      - name: "BRUGG AG"
+        link: "https://brugg.com"
+        image: "images/team/brugg-1200x1200.png"
+      - name: "TCA Thermoclima AG"
+        link: "https://tca.ch"
+        image: "images/team/tca-1200x1200.png"
 ---
