Add reference to flipchart and tv

--- a/data/espace.yml
+++ b/data/espace.yml
@@ -6,8 +6,8 @@ features:
     description: >
                 <p>Situé au centre du village de Vers-l'Église, dans Fully, les locaux sont climatisés, spacieux, lumineux, calme et personnalisable.</p>
                 <p>
-                Salle de conférence (max 12 personnes)<br/>
-                Cabine de réunion (max 6 personnes)<br/>
+                Salle de conférence (max 12 personnes) équipée d'un <a href="https://www.samsung.com/ch_fr/business/smart-signage/digital-flipchart/interactive-display-wmr-series-lh65wmrwbgcxen/">flipchart numérique</a><br/>
+                Cabine de réunion (max 6 personnes) équipée d'un <a href="https://www.samsung.com/fr/tvs/qled-tv/q60b-75-inch-qled-4k-smart-tv-qe75q60bauxxc/">écran intelligent</a><br/>
                 Cafétéria<br/>
                 Zone de pause<br/>
                 Accès par badge 24/7<br/>
