--- a/data/investor.yml
+++ b/data/investor.yml
@@ -61,4 +61,7 @@ category:
       - name: "TCA Thermoclima AG"
         link: "https://tca.ch"
         image: "images/team/tca-1200x1200.png"
+      - name: "CPJ Architecture SA"
+        link: "https://cpjarchitecture.ch"
+        image: "images/team/cpj-1200x1200.png"
 ---
