Add e-alps as sponsor

--- a/data/investor.yml
+++ b/data/investor.yml
@@ -64,4 +64,7 @@ category:
       - name: "CPJ Architecture SA"
         link: "https://cpjarchitecture.ch"
         image: "images/team/cpj-1200x1200.png"
+      - name: "E-Alps"
+        link: "https://e-alps.com"
+        image: "images/team/e-alps-1200x1200.png"
 ---
