--- a/data/pricing.yml
+++ b/data/pricing.yml
@@ -86,7 +86,7 @@ itemPrices:
 
   - packcage: "Permanent"
     features:
-      - feature: "Bureau dédié et personalisable"
+      - feature: "Bureau dédié et personnalisable"
       - feature: "Accès 24/7"
       - feature: "Votre logo format A4 sur la devanture"
       - feature: "Etagères personnelle et casier à clef"
