--- a/data/investor.yml
+++ b/data/investor.yml
@@ -30,6 +30,9 @@ category:
     logo: "images/team/ondes-argent-1200x1200.png"
     size: 2
     investors:
+      - name: "Frialp SA"
+        link: "https://www.frialp.ch"
+        image: "images/team/frialp-1200x1200.png"
       - name: "Finance Assurance Suisse SA"
         link: "https://www.finance-assurance.ch"
         image: "images/team/finance-suisse-sa-1200x1200.png"
